updated to the latest version. Also swapped spray-json with play-json

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,9 +8,12 @@ app {
 	interface = "localhost"
 }
 
-postgres {
+db {
 	host = "localhost"
-	port = 5432
-	dbname = "mezmer"
+	port = 15432
+	dbname = "dbusers"
 	driver = "org.postgresql.Driver"
+	username = "pg_user"
+	password = "pg_password"
+
 }
