AutoInc id wasn't working so am incrementing manually using the list length

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,10 +10,10 @@ app {
 
 db {
 	host = "localhost"
-	port = 15432
-	dbname = "dbusers"
+	port = 5432
+	dbname = "scottwalker"
 	driver = "org.postgresql.Driver"
-	username = "pg_user"
+	username = "scottwalker"
 	password = "pg_password"
 
 }
