--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: scala
 scala:
-  - "2.10.3"
+  - "2.10.4"
+matrix:
+  fast_finish: true
+notifications:
+  email: false
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION compile
+  - sbt test
