--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-language: scala
-scala:
-  - "2.10.4"
 matrix:
   fast_finish: true
 notifications:
   email: false
+language: scala
+scala:
+  - "2.10.4"
+addons:
+  postgresql: "9.3"
+before_script:
+  - psql -c 'create database scottwalker;' -U postgres
 script:
   - sbt test
