updating akka versions and restructured the code to be able to handle multiple db. All tests are using an H2 db now

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,11 +9,10 @@ app {
 }
 
 db {
-	host = "localhost"
-	port = 5432
-	dbname = "scottwalker"
-	driver = "org.postgresql.Driver"
-	username = "scottwalker"
-	password = "pg_password"
+	url = "jdbc:postgresql://localhost:5432/testdb"
+	driver = "org.postgresql.ds.PGSimpleDataSource"
+	username = "postgres"
+	password = ""
+	maximumPoolSize = 5
 
 }
