refactoring the data layer to return objects instead of strings

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,7 +9,7 @@ app {
 }
 
 db {
-	url = "jdbc:postgresql://localhost:5432/testdb"
+	url = "jdbc:postgresql://localhost:5432/tasksDb"
 	driver = "org.postgresql.ds.PGSimpleDataSource"
 	username = "postgres"
 	password = ""
